logs/dag_id=make_parquet/run_id=scheduled__2024-07-15T00:00:00+00:00/task_id=to.parquet/attempt=5.log
[2024-07-24T16:28:37.696+0900] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2024-07-24T16:28:37.704+0900] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: make_parquet.to.parquet scheduled__2024-07-15T00:00:00+00:00 [queued]>
[2024-07-24T16:28:37.706+0900] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: make_parquet.to.parquet scheduled__2024-07-15T00:00:00+00:00 [queued]>
[2024-07-24T16:28:37.707+0900] {taskinstance.py:2306} INFO - Starting attempt 5 of 6
[2024-07-24T16:28:37.710+0900] {taskinstance.py:2330} INFO - Executing <Task(BashOperator): to.parquet> on 2024-07-15 00:00:00+00:00
[2024-07-24T16:28:37.713+0900] {standard_task_runner.py:64} INFO - Started process 326 to run task
[2024-07-24T16:28:37.716+0900] {standard_task_runner.py:90} INFO - Running: ['airflow', 'tasks', 'run', 'make_parquet', 'to.parquet', 'scheduled__2024-07-15T00:00:00+00:00', '--job-id', '467', '--raw', '--subdir', 'DAGS_FOLDER/make_parquet.py', '--cfg-path', '/var/folders/qv/0knwm5h50ml0skpppwpbks_r0000gp/T/tmpgpokad94']
[2024-07-24T16:28:37.717+0900] {standard_task_runner.py:91} INFO - Job 467: Subtask to.parquet
[2024-07-24T16:28:37.731+0900] {task_command.py:426} INFO - Running <TaskInstance: make_parquet.to.parquet scheduled__2024-07-15T00:00:00+00:00 [running]> on host jeongui-MacBookPro.local
[2024-07-24T16:28:37.753+0900] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='airflow' AIRFLOW_CTX_DAG_ID='make_parquet' AIRFLOW_CTX_TASK_ID='to.parquet' AIRFLOW_CTX_EXECUTION_DATE='2024-07-15T00:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='5' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2024-07-15T00:00:00+00:00'
[2024-07-24T16:28:37.754+0900] {taskinstance.py:430} INFO - ::endgroup::
[2024-07-24T16:28:37.760+0900] {subprocess.py:63} INFO - Tmp dir root location: /var/folders/qv/0knwm5h50ml0skpppwpbks_r0000gp/T
[2024-07-24T16:28:37.760+0900] {subprocess.py:75} INFO - Running command: ['/bin/bash', '-c', '\n        echo "to.parquet"\n\n        READ_PATH=~/data/csv/20240715/csv.csv\n        SAVE_PATH=~/data/parquet/20240715/parquet.parquet\n\n        mkdir -p $SAVE_PATH\n\n        python ~/airflow/operator/csv2parquet.py $READ_PATH $SAVE_PATH\n        ']
[2024-07-24T16:28:37.763+0900] {subprocess.py:86} INFO - Output:
[2024-07-24T16:28:37.764+0900] {subprocess.py:93} INFO - to.parquet
[2024-07-24T16:28:37.774+0900] {subprocess.py:93} INFO -   File "/Users/DE32/airflow/operator/csv2parquet.py", line 9
[2024-07-24T16:28:37.774+0900] {subprocess.py:93} INFO -     encoding_errors='ignore'
[2024-07-24T16:28:37.774+0900] {subprocess.py:93} INFO -                     ^^^^^^^^
[2024-07-24T16:28:37.775+0900] {subprocess.py:93} INFO - SyntaxError: invalid syntax. Perhaps you forgot a comma?
[2024-07-24T16:28:37.775+0900] {subprocess.py:97} INFO - Command exited with return code 1
[2024-07-24T16:28:37.776+0900] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2024-07-24T16:28:37.779+0900] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/Users/DE32/.pyenv/versions/3.11.9/envs/note/lib/python3.11/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/DE32/.pyenv/versions/3.11.9/envs/note/lib/python3.11/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/DE32/.pyenv/versions/3.11.9/envs/note/lib/python3.11/site-packages/airflow/models/baseoperator.py", line 401, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/DE32/.pyenv/versions/3.11.9/envs/note/lib/python3.11/site-packages/airflow/operators/bash.py", line 243, in execute
    raise AirflowException(
airflow.exceptions.AirflowException: Bash command failed. The command returned a non-zero exit code 1.
[2024-07-24T16:28:37.781+0900] {taskinstance.py:1206} INFO - Marking task as UP_FOR_RETRY. dag_id=make_parquet, task_id=to.parquet, run_id=scheduled__2024-07-15T00:00:00+00:00, execution_date=20240715T000000, start_date=20240724T072837, end_date=20240724T072837
[2024-07-24T16:28:37.784+0900] {standard_task_runner.py:110} ERROR - Failed to execute job 467 for task to.parquet (Bash command failed. The command returned a non-zero exit code 1.; 326)
[2024-07-24T16:28:37.819+0900] {local_task_job_runner.py:243} INFO - Task exited with return code 1
[2024-07-24T16:28:37.826+0900] {taskinstance.py:3503} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-07-24T16:28:37.826+0900] {local_task_job_runner.py:222} INFO - ::endgroup::
